--- a/paper/references.bib
+++ b/paper/references.bib
@@ -38,3 +38,11 @@
   publisher={American Association for the Advancement of Science}
 }
 
+
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
